@@ -1,6 +1,5 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
-S3method(bootstrap,argostrack)
 S3method(plot,argostrack)
 S3method(plot,argostrack_bootstrap)
 S3method(plot,summary_argostrack)
@@ -13,7 +12,5 @@ S3method(simulate,argostrack)
 S3method(summary,argostrack)
 S3method(summary,argostrack_bootstrap)
 export(argosTrack)
-export(bootstrap)
 export(simulate)
 import(TMB)
-import(mvtnorm)
