@@ -1,5 +1,4 @@
 #' @import TMB
-#' @import mvtnorm
 
 .onLoad <- function(libname,pkgname){
     cat("Loading compiled code...\n")
