@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/convenience.R
 \name{expandMu}
 \alias{expandMu}
 \title{Expand estimated states to all time points}
