@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/simulate.R
 \name{simulate.argostrack}
 \alias{simulate.argostrack}
 \title{Simulate a new track from Argos data}
