@@ -2,6 +2,7 @@
 - Added movement models: Discrete Time Correlated Random Walk (dtcrw), Discrete Step lenght and Bearings model (dsb)
 - Possibility of extracting and plotting step lengths and turning angles between predicted states for all models
 - Support for modelling on a scale of either nautical miles or latitude/longitude for both states and observations.
+- Removed bootstrap functionality
 
 # Version 0.1.0
 - Added movement models: Random Walk (rw) and Multiple Persistence Continuous Time Correlated Random Walk (mpctcrw)
